Sub-menu fix
Fixed the issue where the sub menu links were overlapping each other.
Even tho the main menu changed with this edit, the margin on the buttons
made them more distinct when hovering.

--- a/css/style.css
+++ b/css/style.css
@@ -5049,6 +5049,7 @@ article.summary.post:hover > .openButton {
 .more-menu-ul a,
 .main-menu a,
 .main-sub-menu a {
+  margin-right: 6px;
   padding: 12px 24px !important;
 }
 
